# living-engine-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: default.yaml
data/: sample.csv
docs/: capsule_schema.md  overview.md
src/living_engine/: __init__.py  backtest_runner.py  entropy.py  imm_core.py  narrative.py  proofbridge.py  strategy_api.py
tests/: test_backtest_runner.py
